[gd_scene load_steps=16 format=3 uid="uid://73jm5qjy52vq"]

[ext_resource type="Script" path="res://dialogues/balloon.gd" id="1_4u26j"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="2_a8ve6"]
[ext_resource type="FontFile" uid="uid://d28en571348kx" path="res://Fonts/LongCang-Regular.ttf" id="2_xs4ko"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_reponses_menu.gd" id="3_72ixx"]
[ext_resource type="FontFile" uid="uid://cbwn2x074ykj4" path="res://Fonts/Kenney Rocket.ttf" id="3_x0vgu"]
[ext_resource type="Texture2D" uid="uid://d3qf6k2snur0r" path="res://sprites/UI/navigation_s.png" id="6_drjdp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0.117966, 0.00305404, 0.0436219, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.79, 0.7268, 0.7268, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0.117966, 0.00305404, 0.0436219, 1)
border_color = Color(1, 0.84, 0.84, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font = ExtResource("3_x0vgu")
default_font_size = 20
Button/colors/font_color = Color(1, 0.84, 0.84, 1)
Button/colors/font_hover_color = Color(1, 0.84, 0.84, 1)
Button/fonts/font = ExtResource("2_xs4ko")
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 48
MarginContainer/constants/margin_left = 48
MarginContainer/constants/margin_right = 48
MarginContainer/constants/margin_top = 48
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[sub_resource type="Theme" id="Theme_k1dcv"]

[sub_resource type="Animation" id="Animation_pg3cq"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(200, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_613f5"]
resource_name = "indicate"
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(200, -0.25, 0, 0.25, 0, 180, -0.25, 0, 0.25, 0, 200, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2qe4"]
_data = {
"RESET": SubResource("Animation_pg3cq"),
"indicate": SubResource("Animation_613f5")
}

[node name="Balloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_4u26j")

[node name="Balloon" type="Panel" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(1024, 230)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -232.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_qq3yp")

[node name="Dialogue" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -7.0
offset_right = -1.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Balloon/Dialogue"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Portrait" type="TextureRect" parent="Balloon/Dialogue/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Balloon/Dialogue/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CharacterLabel" type="RichTextLabel" parent="Balloon/Dialogue/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="Balloon/Dialogue/HBoxContainer/VBoxContainer" instance=ExtResource("2_a8ve6")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_k1dcv")
theme_override_colors/default_color = Color(1, 0.84, 0.84, 1)
text = "Dialogue..."
seconds_per_step = 0.04
pause_at_characters = ",.?!"

[node name="Responses" type="MarginContainer" parent="Balloon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.226
anchor_top = 0.166
anchor_right = 0.961
anchor_bottom = 0.168
offset_left = -3.31201
offset_top = -404.224
offset_right = -0.63208
offset_bottom = -0.552
grow_horizontal = 2
grow_vertical = 2

[node name="ResponsesMenu" type="VBoxContainer" parent="Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("3_72ixx")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="Balloon/Responses/ResponsesMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_x0vgu")
text = "Response example"

[node name="Indicator" type="TextureRect" parent="Balloon"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4032.0
offset_top = 200.0
offset_right = 4096.0
offset_bottom = 264.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_drjdp")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Balloon/Indicator"]
libraries = {
"": SubResource("AnimationLibrary_s2qe4")
}
autoplay = "indicate"

[connection signal="gui_input" from="Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="finished_typing" from="Balloon/Dialogue/HBoxContainer/VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_finished_typing"]
[connection signal="spoke" from="Balloon/Dialogue/HBoxContainer/VBoxContainer/DialogueLabel" to="." method="_on_dialogue_label_spoke"]
[connection signal="response_selected" from="Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
